--- a/web/assets/css/bootstrap/_user-profiles.scss
+++ b/web/assets/css/bootstrap/_user-profiles.scss
@@ -260,7 +260,10 @@
       }
 
     }
+  }
 
+  .social-connect-wrapper {
+    padding-bottom: 20px;
   }
 }
 
